--- a/sh/style/sass/script.sass
+++ b/sh/style/sass/script.sass
@@ -12,3 +12,23 @@ li
 	width: 300px
 	height: 200px
 	font-size: 30px
+
+.past_script
+	display: inline-block
+	margin-left: 20px
+
+.view
+	display: inline-block
+	margin-left: 50px
+	color: green
+	font-size: 20px
+
+.del_btn
+	display: inline-block
+	padding: 0px 6px
+	cursor: pointer
+	color: black
+	&:hover
+		background-color: #ff3d4a
+		color: #fff
+	
